# Ai_File_Organiser

./: .env.example  .gitignore  ADDITIONAL_CONSIDERATIONS.md  ANALYSIS_SUMMARY.md  COMPLETE_FIX_PROMPT_FOR_CLAUDE.md  COMPLETE_SAFETY_IMPLEMENTATION.md  COMPLETE_SYSTEM_SUMMARY.md  CONSOLIDATED_FIX_PROMPT_FOR_CLAUDE.txt  CRITICAL_FIXES.py  ENHANCED_FEATURES_SUMMARY.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY_SAFE_MODELS.md  INDEX_AND_ROADMAP.md  INSTALLATION_GUIDE.md  INTELLIGENT_HIERARCHY.md  ISSUE_INVENTORY_AND_SUMMARY.md  LICENSE  MCP_ANALYSIS.md  MCP_USE_CASES.md  MULTI_DRIVE_METADATA.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_QUICK_REFERENCE.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE_FIX_PLAN.md  QUICK_START.md  README.md  SAFETY_GUARDRAILS.md  SAFE_MODELS_UPGRADE.md  config.json  config.yaml  install.bat  install.sh  launcher.py  requirements.txt  setup_ollama.py  setup_safe_models.py
.claude/: settings.local.json
data/: .license_key  command_history.json  users.json
desktop-app/: README.md  TAURI_SETUP_GUIDE.md  index.html  package.json  vite.config.ts
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/src/: main.rs
docs/: COMPLETED_FEATURES.md  ONEDRIVE_SETUP_GUIDE.md  TECHNICAL_IMPLEMENTATION_PLAN.md  TRANSFORMATION_STRATEGY_2025.md  USER_GUIDE.md  agent_examples.json
installer/: __init__.py  auto_updater.py
scripts/: cli_entry.py  cross_drive_cleaner.py
src/: advanced_config.py  async_file_ops.py  auth.py  caching.py  cli.py  config.py  config_yaml.py  main.py  parallel_actions.py  progress.py
(+78 files in other folders)
